traefik-dashboard/resources/traefik-dashboard-basicauth.middleware.traefik.yaml
# Basic authentication method for Traefik dashboard
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: traefik-dashboard-basicauth
spec:
  basicAuth:
    secret: traefik-dashboard-basicauth-secret
