traefik-dashboard/resources/traefik-dashboard.ingressroute.traefik.yaml
# HTTPS ingress for Traefik dashboard and API
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard
spec:
  routes:
  - kind: Rule
    match: Host(`traefik.viktor.cloud`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: traefik-dashboard-basicauth
